--- a/app/composer.json
+++ b/app/composer.json
@@ -11,5 +11,8 @@
         "workerman/workerman": "^3.5",
         "tencentcloudbase/tcb-php-sdk": "^1.0",
         "workerman/mqtt": "^1.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     }
 }
